name:                tapf-demo
version:             0.1.0.0
homepage:            https://github.com/pbv/tapf-demo
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2018 Pedro Vasconcelos
category:            Teaching
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbv/tapf-demo
